added skill level

--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
 							<i class="bitIcon-html"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front html">WORD</div>
+									<div class="ch-info-front html">
+										<h5>Skill</br> level</br>Intermediate</h5>
+									</div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -248,7 +250,7 @@
 							<div class="ch-info-wrap">
 								<div class="ch-info">
 									<div class="ch-info-front css">
-										<h3>Skill</br> level</br>Intermediate</h3>
+										<h5>Skill</br> level</br>Intermediate</h5>
 									</div>
 									<div class="ch-info-back">
 									</div>
@@ -262,7 +264,8 @@
 							<i class="devicon-javascript-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front javascript"></div>
+									<div class="ch-info-front javascript"><h5>Skill</br> level</br>intermediate</h5>
+									</div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -275,7 +278,8 @@
 							<i class="devicon-jquery-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front jquery"></div>
+									<div class="ch-info-front jquery"><h5>Skill</br> level</br>intermediate</h5>
+									</div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -288,7 +292,8 @@
 							<i class="devicon-ruby-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front ruby"></div>
+									<div class="ch-info-front ruby"><h5>Skill</br> level</br>beginner</h5>
+									</div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -301,7 +306,8 @@
 							<i class="devicon-rails-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front rails"></div>
+									<div class="ch-info-front rails"><h5>Skill</br> level</br>intermediate</h5>
+									</div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -314,7 +320,7 @@
 							<i class="devicon-nodejs-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front node"></div>
+									<div class="ch-info-front node"><h5>Skill</br> level</br>beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -327,7 +333,7 @@
 							<i class="devicon-angularjs-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front angular"></div>
+									<div class="ch-info-front angular"><h5>Skill</br> level</br>beginner</h5></div>
 									<h3></h3>
 									<div class="ch-info-back">
 									</div>
@@ -341,7 +347,7 @@
 							<i class="devicon-mongodb-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front mongodb"></div>
+									<div class="ch-info-front mongodb"><h5>Skill</br> level</br>beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -354,7 +360,7 @@
 							<i class="devicon-postgresql-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front postgresql"></div>
+									<div class="ch-info-front postgresql"><h5>Skill</br> level</br>beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -367,7 +373,7 @@
 							<i class="devicon-mysql-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front mysql"></div>
+									<div class="ch-info-front mysql"><h5>Skill</br> level</br>beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -380,7 +386,7 @@
 							<i class="devicon-wordpress-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front wordpress"></div>
+									<div class="ch-info-front wordpress"><h5>Skill</br> level</br>beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -393,7 +399,7 @@
 							<i class="devicon-php-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front php"></div>
+									<div class="ch-info-front php"><h5>Skill</br> level</br>beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -406,7 +412,7 @@
 							<i class="devicon-git-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front git"></div>
+									<div class="ch-info-front git"><h5>Skill</br> level</br>intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -419,7 +425,7 @@
 							<i class="devicon-sass-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front sass"></div>
+									<div class="ch-info-front sass"><h5>Skill</br> level</br>intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -432,7 +438,7 @@
 							<i class="devicon-illustrator-line"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front illustrator"></div>
+									<div class="ch-info-front illustrator"><h5>Skill</br> level</br>intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -445,7 +451,7 @@
 							<i class="devicon-photoshop-line"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front photoshop"></div>
+									<div class="ch-info-front photoshop"><h5>Skill</br> level</br>intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -458,7 +464,7 @@
 							<i class="devicon-heroku-original"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front heroku"></div>
+									<div class="ch-info-front heroku"><h5>Skill</br> level</br>intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -471,7 +477,7 @@
 							<i class="devicon-github-original"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front github"></div>
+									<div class="ch-info-front github"><h5>Skill</br> level</br>intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -484,7 +490,7 @@
 							<i class="devicon-atom-original"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front atom"></div>
+									<div class="ch-info-front atom"><h5>Skill</br> level</br>intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
