--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<li class="current"><a href="#bio">Bio</a></li>
 					<li><a href="#education">Education</a></li>
 					<li><a href="#experience">Experience</a></li>
-					<li><a href="#testimonials">Testimonials</a></li>
+					<!-- <li><a href="#testimonials">Testimonials</a></li> -->
 				</ul>
 				<div class="tab">
 					<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
@@ -188,12 +188,12 @@
 		</div>
 	</aside>
 	<aside class="testimonial tab-content main"  id="testimonials">
-	<div class="holder">
+	<!-- <div class="holder"> -->
 		<!-- <div class="title scrollflow -slide-top -opacity"><h2>Skills</h2></div> -->
 		<!-- <div class="testimonial scrollflow -slide-top -opacity"> -->
 
 				<!-- <div class="wrapper"> -->
-			<ul class="bxslider">
+			<!-- <ul class="bxslider">
 				<li>
 					<div>
 						<p class="quote">"Farishta worked with The Washington Post on one of our biggest annual events. She was instrumental in the success of this event with her pre-planning the event down to the day-of event execution. She was energetic and detail oriented during the event preparation. She helps to analyze projects from the beginning in order to troubleshoot any downstream problems. She was great to work with and very helpful!"</p>
@@ -220,7 +220,7 @@
 							<div class="client-info">Peter Kirschner, </br>Marketing Planning Manager at Optum360</div>
 						</div>
 					</li>
-				</ul>
+				</ul> -->
 </div>
 </section>
 <section id="portfolio">
@@ -235,7 +235,7 @@
 							<div class="ch-info-wrap">
 								<div class="ch-info">
 									<div class="ch-info-front html">
-										<h5>Skill</br> level</br>Intermediate</h5>
+										<h5>Skill</br> level:</br>Intermediate</h5>
 									</div>
 									<div class="ch-info-back">
 									</div>
@@ -250,7 +250,7 @@
 							<div class="ch-info-wrap">
 								<div class="ch-info">
 									<div class="ch-info-front css">
-										<h5>Skill</br> level</br>Intermediate</h5>
+										<h5>Skill</br> level:</br>Intermediate</h5>
 									</div>
 									<div class="ch-info-back">
 									</div>
@@ -264,7 +264,7 @@
 							<i class="devicon-javascript-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front javascript"><h5>Skill</br> level</br>intermediate</h5>
+									<div class="ch-info-front javascript"><h5>Skill</br> level:</br>Intermediate</h5>
 									</div>
 									<div class="ch-info-back">
 									</div>
@@ -278,7 +278,7 @@
 							<i class="devicon-jquery-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front jquery"><h5>Skill</br> level</br>intermediate</h5>
+									<div class="ch-info-front jquery"><h5>Skill</br> level:</br>Intermediate</h5>
 									</div>
 									<div class="ch-info-back">
 									</div>
@@ -292,7 +292,7 @@
 							<i class="devicon-ruby-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front ruby"><h5>Skill</br> level</br>beginner</h5>
+									<div class="ch-info-front ruby"><h5>Skill</br> level:</br>Beginner</h5>
 									</div>
 									<div class="ch-info-back">
 									</div>
@@ -306,7 +306,7 @@
 							<i class="devicon-rails-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front rails"><h5>Skill</br> level</br>intermediate</h5>
+									<div class="ch-info-front rails"><h5>Skill</br> level:</br>Intermediate</h5>
 									</div>
 									<div class="ch-info-back">
 									</div>
@@ -320,7 +320,7 @@
 							<i class="devicon-nodejs-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front node"><h5>Skill</br> level</br>beginner</h5></div>
+									<div class="ch-info-front node"><h5>Skill</br> level:</br>Beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -333,7 +333,7 @@
 							<i class="devicon-angularjs-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front angular"><h5>Skill</br> level</br>beginner</h5></div>
+									<div class="ch-info-front angular"><h5>Skill</br> level:</br>Beginner</h5></div>
 									<h3></h3>
 									<div class="ch-info-back">
 									</div>
@@ -347,7 +347,7 @@
 							<i class="devicon-mongodb-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front mongodb"><h5>Skill</br> level</br>beginner</h5></div>
+									<div class="ch-info-front mongodb"><h5>Skill</br> level:</br>Beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -360,7 +360,7 @@
 							<i class="devicon-postgresql-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front postgresql"><h5>Skill</br> level</br>beginner</h5></div>
+									<div class="ch-info-front postgresql"><h5>Skill</br> level:</br>Beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -373,7 +373,7 @@
 							<i class="devicon-mysql-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front mysql"><h5>Skill</br> level</br>beginner</h5></div>
+									<div class="ch-info-front mysql"><h5>Skill</br> level:</br>Beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -386,7 +386,7 @@
 							<i class="devicon-wordpress-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front wordpress"><h5>Skill</br> level</br>beginner</h5></div>
+									<div class="ch-info-front wordpress"><h5>Skill</br> level:</br>Beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -399,7 +399,7 @@
 							<i class="devicon-php-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front php"><h5>Skill</br> level</br>beginner</h5></div>
+									<div class="ch-info-front php"><h5>Skill</br> level:</br>Beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -412,7 +412,7 @@
 							<i class="devicon-git-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front git"><h5>Skill</br> level</br>intermediate</h5></div>
+									<div class="ch-info-front git"><h5>Skill</br> level:</br>Intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -425,7 +425,7 @@
 							<i class="devicon-sass-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front sass"><h5>Skill</br> level</br>intermediate</h5></div>
+									<div class="ch-info-front sass"><h5>Skill</br> level:</br>Intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -438,7 +438,7 @@
 							<i class="devicon-illustrator-line"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front illustrator"><h5>Skill</br> level</br>intermediate</h5></div>
+									<div class="ch-info-front illustrator"><h5>Skill</br> level:</br>Intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -451,7 +451,7 @@
 							<i class="devicon-photoshop-line"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front photoshop"><h5>Skill</br> level</br>intermediate</h5></div>
+									<div class="ch-info-front photoshop"><h5>Skill</br> level:</br>Intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -464,7 +464,7 @@
 							<i class="devicon-heroku-original"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front heroku"><h5>Skill</br> level</br>intermediate</h5></div>
+									<div class="ch-info-front heroku"><h5>Skill</br> level:</br>Intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -477,7 +477,7 @@
 							<i class="devicon-github-original"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front github"><h5>Skill</br> level</br>intermediate</h5></div>
+									<div class="ch-info-front github"><h5>Skill</br> level:</br>Intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
@@ -490,7 +490,7 @@
 							<i class="devicon-atom-original"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front atom"><h5>Skill</br> level</br>intermediate</h5></div>
+									<div class="ch-info-front atom"><h5>Skill</br> level:</br>Intermediate</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
