trying to fix scroll alignment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display:400,700,700italic,900italic,900,400italic' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Arapey|Bitter|Cutive|Cutive+Mono|Gravitas+One|Inconsolata|Josefin+Sans|Muli|Open+Sans|Petit+Formal+Script|Playfair+Display|Pontano+Sans|Prata|Raleway|Roboto|Roboto+Mono|Rubik|Sacramento|Source+Code+Pro|Vidaloka" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/common.css" />
 	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/style.css" />
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -72,7 +72,8 @@
 		<div class="welcome">
 			<i class="logo fade-in one"></i>
 			<h1 class="fade-in two">Hello, <strong>World</strong></h1>
-			<p class="fade-in three" "text"><strong>I am </strong>Farishta Haider & I love
+			<p class="fade-in three" "text">I am <strong>Farishta Haider</strong>.</br>
+				A <strong>Full Stack Developer</strong> who loves
 				<span class="rw-words rw-words-1"><span>tech.</span>
 				<span>web development.</span>
 				<span>pop culture.</span>
@@ -110,21 +111,25 @@
 						<div class="row">
 							<img src="images/university-of-maryland-logo.png" alt="University of Maryland logo">
 							<div class="brief">
-								<h1> Univeristy of Maryland</h1>
-								<h2> College Park, Maryland </h2>
-								<p> Communications</p>
+
+								<span class="name">Univeristy of Maryland</span>
+								<span class="position"> College Park, Maryland
+								<p> Communication Major</p>
 								<p> Bachelors of Arts & Humanities</p>
 								<p> Graduated May 2004</p>
+							</span>
 							</div>
 						</div>
 						<div class="row">
+							<div class="ga">
 							<img src="images/1ga_logo.jpg" alt="General Assembly Logo">
+						</div>
 							<div class="brief">
-								<h1>General Assembly</h1>
-								<h2>Washington, D.C.</h2>
-								<h3> Web Development Immersive</h3>
-								<p> Cohort 8</p>
-								<p> February 2016 - April 2016</p>
+								<span class="name">General Assembly</span>
+								<span class="position">Washington, D.C.
+								<p> Web Development Immersive</p>
+								<p> February 2016 - May 2016</p>
+								</span>
 							</div>
 						</div>
 					</aside>
@@ -264,7 +269,7 @@
 							<i class="devicon-javascript-plain"></i>
 							<div class="ch-info-wrap">
 								<div class="ch-info">
-									<div class="ch-info-front javascript"><h5>Skill</br> level:</br>Intermediate</h5>
+									<div class="ch-info-front javascript"><h5>Skill level:</br>Intermediate</h5>
 									</div>
 									<div class="ch-info-back">
 									</div>
