--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
 				<img src="images/montage.png" alt="Montage Marketing Group Logo"></img></br>
 				<div class="brief">
 				</br>
-				<span class="position">Marketing Consultant, July 2015 – Current</span>
+				<span class="company-name">Marketing Consultant</br> July 2015 – Current</span>
+				<span class="position">
 				<li>Setup and monitor analytic dashboards and supporting programs.</li>
 				<li>Develop SEO strategies, implement and monitor campaigns.</li>
 				<li>Perform site analysis, keyword research, site mapping and assess link building opportunities.</li>
@@ -147,12 +148,15 @@
 				<li>Create Social Content Database to optimally manage and organize the social program.</li>
 				<li>Create graphics and designs for social media platforms and presentations.</li>
 				<li>Maintain the company’s website; adding features to increase online engagement.</li>
+			</span>
 			</div>
 		</div>
 		<div class="row">
 			<img src="images/geico-logo.jpg" alt="GEICO logo"></img>
 			<div class="brief">
-				<span class="position">Marketing Buyer – Events,   October 2012 – February 2015</span>
+				<span class="company-name">
+				Marketing Buyer – Events</br>October 2012 – February 2015</span>
+				<span class="position">
 				<li>Managed national event programs with our experiential marketing company. Activated 293 national events in 2013, 364 national events in 2014 with a 36% planned increase in 2015.</li>
 				<li>Developed and implemented strategic marketing plans for event marketing team.</li>
 				<li>Coordinated communication with all internal marketing sections to enhance events and programs.</li>
@@ -161,7 +165,9 @@
 				<li>Researched, planned and implemented new social media strategies to increase impressions of events and brand.</li>
 				<li>Member of the GEICO Blog team. Writing about events, marketing and topics that can be related to GEICO.</li>
 				<li>Continued Event Marketing Coordinator responsibilities, excluding regional event coordination, in addition to new duties.</li></br>
-				<span class="position">Marketing Coordinator – Events, September 2008 – October 2012</span>
+				<span class="company-name">
+				Marketing Coordinator – Events</br>September 2008 – October 2012</span>
+				<span class="position">
 				<li>Lead 20+ Regional Event Marketing Coordinators. Responsibilities included supporting teams with equipment, promotional products, event approval and event payment processing.</li>
 				<li>Created and maintained lead analysis program to measure ROI of events. The key learning from analysis were used in planning and evaluation of marketing strategies and programs.</li>
 				<li>Created and coordinated the email blast program to have a post-event reach with our consumers.</li>
@@ -171,24 +177,29 @@
 				<li>Appraised regional and national team’s performance by secret shopping events throughout the year.</li>
 				<li>Managed independent sponsorships such as Live Nation, Hershey Park, Merriweather Post Pavilion and more. Included negotiating contracts, creating marketing strategies, coordinating sponsorship with teams and facilitating support to ensure the success of the program.</li>
 				<li>Continued Event Marketing Specialist responsibilities in addition to new duties.</li></br>
-				<span class="position">Marketing Specialist II – Events, July 2007 – September 2008</span>
+				<span class="company-name">Marketing Specialist II – Events</br>July 2007 – September 2008</span>
+				<span class="position">
 				<li>Planned, tracked and maintained $22+ million budget. Consistently improving budget spreadsheets to be multi-functional tool.</li>
 				<li>Planned and produced yearly GEICO Event Marketing Summit.</li>
 				<li>Managed promotional products for the event marketing teams. Ensuring GEICO has quality products as giveaways. Ordered over $2 million of products and maintaining online inventory.</li>
 				<li>Trafficked TV and radio tactical spots through our media team to promote our activation at events.</li>
 				<li>Coordinated GEICO’s partnership with Association of Zoos and Aquariums on a traveling gecko exhibit.</li>
 				<li>Assisted in management of sponsored GEICO teams: Miss GEICO, GEICO Skytypers and Tim Weber.</li>
+				</span>
 			</div>
 		</div>
 		<div class="row">
 			<img src="images/summitlogo.jpg" alt="Summit Marketing logo"></img>
 			<div class="brief">
-				<span class="position">Program Accounts Manager, March 2004 – May 2007</span>
+				<span class="company-name">Summit Marketing
+				Program Accounts Manager</br>March 2004 – May 2007</span>
+				<span class="position">
 				<li>Collaborated in a team of three to run Summit’s largest account, GEICO.</li>
 				<li>Managed 500+ items for GEICO’s two E-commerce stores, located in three different warehouses.</li>
 				<li>Managed 100+ Independent GEICO Field Representatives with customization program.</li>
 				<li>Brainstormed and produced product ideas for E-Commerce stores, Sales Contests and Custom programs.</li>
 				<li>Provided Customer Service for GEICO’s two E-Commerce stores to all GEICO employees, Field Representatives and the general public.</li>
+				</span>
 			</div>
 		</div>
 	</aside>
