--- a/index.html
+++ b/index.html
@@ -543,8 +543,8 @@
 								<p1> This was our first WDI project. We had a topic to choose from and were restricted from using jQuery. I chose Trivia because it was a fun game that I personally enjoy.</p1></br>
 								<p1>I have already made some updates since the project was completed but still would like to add a scoreboard and more dynanic notifiers when you get the questions correct or wrong.</p1></br>
 								<div class="btn_container">
-									<button class="button fade-in four"><a href="https://github.com/LaFrish/Trivia_Night"><i class="fa fa-github"> Github Repo</i></a></button>
-									<button class="button fade-in four"><a href="http://lafrish.github.io/Trivia_Night/"><i class="fa fa-globe"> Trivia Night Site</i></a></button>
+									<button class="button fade-in four"><a href="https://github.com/LaFrish/Trivia_Night", target= '_blank'><i class="fa fa-github"> Github Repo</i></a></button>
+									<button class="button fade-in four"><a href="http://lafrish.github.io/Trivia_Night/", target= '_blank'><i class="fa fa-globe"> Trivia Night Site</i></a></button>
 								</div>
 							</div>
 						</div>
@@ -564,8 +564,8 @@
 								<p1> Do you ever feel down in the dumps and need a quick cheer me up? Well then, Cheerie is the app for you. This delightful application was my second project for WDI. It is written in <strong> Ruby on Rails</strong></p1></br>
 								<p1> I chose this subject matter because I personally go to looks at gifs to cheer myself up and wanted to share this system to others to assist in turning their frowns upside down. </p1></br>
 								<div class="btn_container">
-									<button class="button fade-in four"><a href="https://github.com/LaFrish/Cheerie"><i class="fa fa-github"> Github Repo</i></a></button>
-									<button class="button fade-in four"><a href="http://cheerie.herokuapp.com/"><i class="fa fa-globe"> Cheerie Site</i></a></button>
+									<button class="button fade-in four"><a href="https://github.com/LaFrish/Cheerie", target= '_blank'><i class="fa fa-github"> Github Repo</i></a></button>
+									<button class="button fade-in four"><a href="http://cheerie.herokuapp.com/", target= '_blank'><i class="fa fa-globe"> Cheerie Site</i></a></button>
 								</div>
 							</div>
 						</div>
@@ -585,8 +585,8 @@
 								<p1> iCare is a web application that assists residents in the DC Metro area find volunteer events and share volunteer stories. iCare was created with a <strong>Ruby on Rails backend and AngularJS Frontend</strong>.</p1></br>
 								<p1>This was a group project created by Alexa Klien, Brittany Branson and I. My contribtion to the project was the event portion of the site.</p1></br>
 								<div class="btn_container">
-									<button class="button fade-in four"><a href="https://github.com/aklein916/iCare-Volunteer-Project"><i class="fa fa-github"> Github Repo</i></a></button>
-									<button class="button fade-in four"><a href="https://icare-volunteer-app.herokuapp.com/"><i class="fa fa-globe">iCare Site</i></a></button>
+									<button class="button fade-in four"><a href="https://github.com/aklein916/iCare-Volunteer-Project", target= '_blank'><i class="fa fa-github"> Github Repo</i></a></button>
+									<button class="button fade-in four"><a href="https://icare-volunteer-app.herokuapp.com/", target= '_blank'><i class="fa fa-globe">iCare Site</i></a></button>
 								</div>
 							</div>
 						</div>
@@ -606,8 +606,8 @@
 								<p1> Node Vodka is the latest and greatest vodka line that is launching this summer. To celebrate their inaugrial year, they are hosting lucky winners at their Node Beach House. The Node Beach House is the latest experiential marketing campaigns from XYZ Marketing and this  website it the accompanying microsite for the tour. Extending the reach of the event long after the tour ends. There is a sweepstakes submission page to generate lead data, a photo pick up site that can be shared socially fully branded with Node's logo and mixologist section to show the many ways you are able to enjoy the vodka of the summer. And if you can't make it to the beach house, you can live vicariously through the experience by listening to Node Radio.</p1></br>
 								<p1> For our fourth and final project, I took my past experience in marketing with a developer twist. With the opportunity to use any language of our choise, I made this as a <strong>MEAN app</strong>.</p1></br>
 								<div class="btn_container">
-									<button class="button fade-in four"><a href="https://github.com/LaFrish/beachhouse"><i class="fa fa-github"> Github Repo</i></a></button>
-									<button class="button fade-in four"><a href=""><i class="fa fa-globe">Node Beachhouse</i></a></button>
+									<button class="button fade-in four"><a href="https://github.com/LaFrish/beachhouse", target= '_blank'><i class="fa fa-github"> Github Repo</i></a></button>
+									<button class="button fade-in four"><a href="", target= '_blank'><i class="fa fa-globe">Node Beachhouse</i></a></button>
 								</div>
 							</div>
 						</div>
@@ -627,8 +627,8 @@
 								<p1> A yearbook for the Web Development Immersive Cohort 8. </p1></br>
 								<p1> A project that was just for fun to share memories with our classmates. </br>Written in <strong>Ruby on Rails.</strong>.</p1></br>
 								<div class="btn_container">
-									<button class="button fade-in four"><a href="https://github.com/LaFrish/wdi8-yearbook"><i class="fa fa-github"> Github Repo</i></a></button>
-									<button class="button fade-in four"><a href="https://wdi8-yearbook.herokuapp.com/"><i class="fa fa-globe">WDI Yearbook</i></a></button>
+									<button class="button fade-in four"><a href="https://github.com/LaFrish/wdi8-yearbook", target= '_blank'><i class="fa fa-github"> Github Repo</i></a></button>
+									<button class="button fade-in four"><a href="https://wdi8-yearbook.herokuapp.com/", target= '_blank'><i class="fa fa-globe">WDI Yearbook</i></a></button>
 								</div>
 							</div>
 						</div>
@@ -648,8 +648,8 @@
 								<p1> My last major program at GEICO was a true labor of love. Being the lead of the project from conception to when it ended it's first season on tour. This acclaimed tour was so successful that GEICO ordered a second bus tour to be on the road the next tour season. Working hand in hand with RedPeg Marketing, we created a truly interactive experience.</p1></br>
 								<p1>On entrance, we collected consumer data through a gas card giveway that they entered at our tabletop kiosks, then had a  photo opportunity using our GEICO overlays with specialized characters, were entertained by our EMCEE on stage while they waited to enter the bus. Once on the GEICO bus, the consumer played GEICO pinball while waiting for their turn to sing and dance with the gecko in GEICO Karaoke. A full fan experience at the largest events on the East Coast.</p1></br>
 								<div class="btn_container">
-									<button class="button fade-in four"><a href="https://drive.google.com/file/d/0B287eiUVjLsLdk8xMExWLUpMNlE/view?usp=sharing"><i class="fa fa-file-powerpoint-o"> GEICO Bus Tour Summary</i></a></button>
-									<button class="button fade-in four"><a href="http://www.eventmarketer.com/article/geico-takes-summer-tour-trio-mascots/"><i class="fa fa-file-o"> Bus Article</i></a></button>
+									<button class="button fade-in four"><a href="https://drive.google.com/file/d/0B287eiUVjLsLdk8xMExWLUpMNlE/view?usp=sharing", target= '_blank'><i class="fa fa-file-powerpoint-o"> GEICO Bus Tour Summary</i></a></button>
+									<button class="button fade-in four"><a href="http://www.eventmarketer.com/article/geico-takes-summer-tour-trio-mascots/", target= '_blank'><i class="fa fa-file-o"> Bus Article</i></a></button>
 								</div>
 							</div>
 						</div>
@@ -663,7 +663,7 @@
 			<div class="title scrollflow -slide-top -opacity"><h2>Contact Me</h2></div>
 			<div class="contact-info">
 				<div class="mail"><a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com"><i class="fa fa-envelope"></i> farishta.haider@gmail.com</a></div>
-				<div class="tel"><i class="fa fa-mobile"></i>301 - 509 - 2483</div>
+				<div class="tel"><a href="tel:301-509-2483"><i class="fa fa-mobile"></i>301 - 509 - 2483</a></div>
 			</div>
 			<div class="social">
 				<a href="https://www.behance.net/LaFrish" target="_blank"><i class="fa fa-behance"></i></a>
