hiding tech in pop up while under construction

--- a/index.html
+++ b/index.html
@@ -539,10 +539,10 @@
 							<div class="pop1">
 								<span1>✖</span1>
 								<h6>Trivia Night</h6>
-								<div class="javascript">
+								<!-- <div class="javascript">
 									<h4>JavaScript</h4>
 									<i class="devicon-javascript-plain"></i>
-								</div>
+								</div> -->
 								<p1> A trivia game written in Vanilla <strong>JavaScript</strong>.</p1></br>
 								<p1> This was our first WDI project. We had a topic to choose from and were restricted from using jQuery. I chose Trivia because it was a fun game that I personally enjoy.</p1></br>
 								<p1>I have already made some updates since the project was completed but still would like to add a scoreboard and more dynanic notifiers when you get the questions correct or wrong.</p1></br>
