updates of skill and experience

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="devicon-master/devicon.min.css">
 	<link rel="stylesheet" href="bitIcon/style.css">
 	<link rel="stylesheet" href="bitIcon/variables.scss">
+	<link rel="stylesheet" href="haml/haml.css">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
@@ -101,7 +102,7 @@
 				<div class="tab">
 					<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
 						<p>Hello, my name is <strong>Farishta Haider</strong>.</br>
-							A <strong>Full-Stack Developer</strong> with a strong background in Marketing. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
+							A <strong>Full-Stack Developer</strong> with a strong background in <strong> Marketing </strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
 							<div class="links scrollflow"><a href="https://drive.google.com/open?id=0B9BDSYdQ3pr8b3RvRElWRE5nR1k" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
 								<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
 							</div>
@@ -111,7 +112,6 @@
 						<div class="row">
 							<img src="images/university-of-maryland-logo.png" alt="University of Maryland logo">
 							<div class="brief">
-
 								<span class="name">Univeristy of Maryland</span>
 								<span class="position"> College Park, Maryland
 								<p> Communication Major</p>
@@ -135,11 +135,32 @@
 					</aside>
 		<aside class="experience tab-content"  id="experience">
 			<div class="row">
+				</br>
+				</br>
+				</br>
+				<img src="images/logo-gray.png" alt="ProTrakr Logo"></img></br>
+				<div class="brief">
+				</br>
+				<span class="company-name">Junior Front-End Developer Intern </br> June 2016 – Current</span>
+				<span class="position2">
+					</br>
+					<ul>
+				<li>Develop and optimize new user-facing features.</li>
+				<li>Build re-usable code and libraries for future use.</li>
+				<li>Ensure technical feasibility of UI/UX designs.</li>
+				<li>Optimize applications for maximum speed and scalability.</li>
+			</ul>
+			</span>
+			</div>
+		</div>
+			<div class="row">
 				<img src="images/montage.png" alt="Montage Marketing Group Logo"></img></br>
 				<div class="brief">
 				</br>
 				<span class="company-name">Marketing Consultant</br> July 2015 – Current</span>
 				<span class="position">
+					</br>
+					<ul>
 				<li>Setup and monitor analytic dashboards and supporting programs.</li>
 				<li>Develop SEO strategies, implement and monitor campaigns.</li>
 				<li>Perform site analysis, keyword research, site mapping and assess link building opportunities.</li>
@@ -148,6 +169,7 @@
 				<li>Create Social Content Database to optimally manage and organize the social program.</li>
 				<li>Create graphics and designs for social media platforms and presentations.</li>
 				<li>Maintain the company’s website; adding features to increase online engagement.</li>
+			</ul>
 			</span>
 			</div>
 		</div>
@@ -155,8 +177,10 @@
 			<img src="images/geico-logo.jpg" alt="GEICO logo"></img>
 			<div class="brief">
 				<span class="company-name">
-				Marketing Buyer – Events</br>October 2012 – February 2015</span>
+				Marketing Buyer</br>October 2012 – February 2015</span>
 				<span class="position">
+					</br>
+					<ul>
 				<li>Managed national event programs with our experiential marketing company. Activated 293 national events in 2013, 364 national events in 2014 with a 36% planned increase in 2015.</li>
 				<li>Developed and implemented strategic marketing plans for event marketing team.</li>
 				<li>Coordinated communication with all internal marketing sections to enhance events and programs.</li>
@@ -165,9 +189,12 @@
 				<li>Researched, planned and implemented new social media strategies to increase impressions of events and brand.</li>
 				<li>Member of the GEICO Blog team. Writing about events, marketing and topics that can be related to GEICO.</li>
 				<li>Continued Event Marketing Coordinator responsibilities, excluding regional event coordination, in addition to new duties.</li></br>
-				<span class="company-name">
-				Marketing Coordinator – Events</br>September 2008 – October 2012</span>
+			</ul>
+			<span class="company-name">
+				Marketing Coordinator</br>September 2008 – October 2012</span>
 				<span class="position">
+					</br>
+					<ul>
 				<li>Lead 20+ Regional Event Marketing Coordinators. Responsibilities included supporting teams with equipment, promotional products, event approval and event payment processing.</li>
 				<li>Created and maintained lead analysis program to measure ROI of events. The key learning from analysis were used in planning and evaluation of marketing strategies and programs.</li>
 				<li>Created and coordinated the email blast program to have a post-event reach with our consumers.</li>
@@ -177,66 +204,72 @@
 				<li>Appraised regional and national team’s performance by secret shopping events throughout the year.</li>
 				<li>Managed independent sponsorships such as Live Nation, Hershey Park, Merriweather Post Pavilion and more. Included negotiating contracts, creating marketing strategies, coordinating sponsorship with teams and facilitating support to ensure the success of the program.</li>
 				<li>Continued Event Marketing Specialist responsibilities in addition to new duties.</li></br>
-				<span class="company-name">Marketing Specialist II – Events</br>July 2007 – September 2008</span>
+				<span class="company-name">Marketing Specialist II
+				</br>July 2007 – September 2008</span>
 				<span class="position">
+					</br>
 				<li>Planned, tracked and maintained $22+ million budget. Consistently improving budget spreadsheets to be multi-functional tool.</li>
 				<li>Planned and produced yearly GEICO Event Marketing Summit.</li>
 				<li>Managed promotional products for the event marketing teams. Ensuring GEICO has quality products as giveaways. Ordered over $2 million of products and maintaining online inventory.</li>
 				<li>Trafficked TV and radio tactical spots through our media team to promote our activation at events.</li>
 				<li>Coordinated GEICO’s partnership with Association of Zoos and Aquariums on a traveling gecko exhibit.</li>
 				<li>Assisted in management of sponsored GEICO teams: Miss GEICO, GEICO Skytypers and Tim Weber.</li>
+			</ul>
 				</span>
 			</div>
 		</div>
 		<div class="row">
 			<img src="images/summitlogo.jpg" alt="Summit Marketing logo"></img>
 			<div class="brief">
-				<span class="company-name">Summit Marketing
+				<span class="company-name">
 				Program Accounts Manager</br>March 2004 – May 2007</span>
 				<span class="position">
+					</br>
+					<ul>
 				<li>Collaborated in a team of three to run Summit’s largest account, GEICO.</li>
 				<li>Managed 500+ items for GEICO’s two E-commerce stores, located in three different warehouses.</li>
 				<li>Managed 100+ Independent GEICO Field Representatives with customization program.</li>
 				<li>Brainstormed and produced product ideas for E-Commerce stores, Sales Contests and Custom programs.</li>
 				<li>Provided Customer Service for GEICO’s two E-Commerce stores to all GEICO employees, Field Representatives and the general public.</li>
+			</ul>
 				</span>
 			</div>
 		</div>
 	</aside>
-	<aside class="testimonial tab-content main"  id="testimonials">
-	<!-- <div class="holder"> -->
+	<aside class="testimonial tab-content"  id="testimonials">
+	<div class="holder">
 		<!-- <div class="title scrollflow -slide-top -opacity"><h2>Skills</h2></div> -->
 		<!-- <div class="testimonial scrollflow -slide-top -opacity"> -->
 
 				<!-- <div class="wrapper"> -->
-			<!-- <ul class="bxslider">
+			<ul class="bxslider">
 				<li>
 					<div>
-						<p class="quote">"Farishta worked with The Washington Post on one of our biggest annual events. She was instrumental in the success of this event with her pre-planning the event down to the day-of event execution. She was energetic and detail oriented during the event preparation. She helps to analyze projects from the beginning in order to troubleshoot any downstream problems. She was great to work with and very helpful!"</p>
+						<div class="quote">"Farishta worked with The Washington Post on one of our biggest annual events. She was instrumental in the success of this event with her pre-planning the event down to the day-of event execution. She was energetic and detail oriented during the event preparation. She helps to analyze projects from the beginning in order to troubleshoot any downstream problems. She was great to work with and very helpful!"</div></br>
 						<div class="client-info">Megan Nunn, </br> Production Manager at The Washington Post</div>
 					</div>
 				</li>
 				<li>
 					<div>
 						<p class="quote">
-							"I have had the distinct pleasure of working with Farishta over the past 5 years as she managed the RedPeg/GEICO relationship. She was an integral part in the successful launch and execution of our very first “GEICO Bus” program. One of Farishta’s greatest strengths is her ability to multitask in a very fast moving event environment. She pays close attention to the digital/social components that allows her to make informed decisions about where/when the GEICO tours should execute. She managed each event with attention to detail, and ensured the team had everything they needed prior to activation. Farishta is a great team player. She understands we all must play our part in order to keep the wheels in motion and heading in the same direction."	</p>
+							"I have had the distinct pleasure of working with Farishta over the past 5 years as she managed the RedPeg/GEICO relationship. She was an integral part in the successful launch and execution of our very first “GEICO Bus” program. One of Farishta’s greatest strengths is her ability to multitask in a very fast moving event environment. She pays close attention to the digital/social components that allows her to make informed decisions about where/when the GEICO tours should execute. She managed each event with attention to detail, and ensured the team had everything they needed prior to activation. Farishta is a great team player. She understands we all must play our part in order to keep the wheels in motion and heading in the same direction."	</p></br>
 							<div class="client-info">Brad Nierenberg, </br>President / CEO and founder of RedPeg Marketing </div>
 						</div>
 					</li>
 					<li>
 						<div>
 							<p class="quote">"I worked with Farishta on multiple projects for GEICO; during that time she demonstrated strong interpersonal skills as well as a great understanding of the brand identity. At all times she drove the business objectives forward, motivating the team to care about the projects and be invested in their success. She was the go-to person for many aspects of the day to day management of the account and had great solutions when it came to problem solving. Her positive attitude and motivational leadership was terrific throughout. Farishta also has a very good grasp of technical matters and used that knowledge to evaluate and ensure the projects had robust solutions in those areas. It's my pleasure to recommend her."
-							</p>
+							</p></br>
 							<div class="client-info"> Martin Codd, </br>Experiential Architect (VP of Operations at RedPeg Marketing)</div>
 						</div>
 					</li>
 					<li>
 						<div>
-							<p class="quote"> "Farishta is an eager and ambitious event marketer, who is always looking into new ways to approach potential customers. She also is a resident and passionate expert on social media and blogging. We have leaned on Farishta to help implement numerous social media extensions from photo sharing to social gaming elements. All said, Farishta is a well rounded marketer with experience of core and emerging event marketing trends." </p>
+							<p class="quote"> "Farishta is an eager and ambitious event marketer, who is always looking into new ways to approach potential customers. She also is a resident and passionate expert on social media and blogging. We have leaned on Farishta to help implement numerous social media extensions from photo sharing to social gaming elements. All said, Farishta is a well rounded marketer with experience of core and emerging event marketing trends." </p></br>
 							<div class="client-info">Peter Kirschner, </br>Marketing Planning Manager at Optum360</div>
 						</div>
 					</li>
-				</ul> -->
+				</ul>
 </div>
 </section>
 <section id="portfolio">
@@ -410,6 +443,19 @@
 						</div>
 					</li>
 					<li>
+						<div class="ch-item apache">
+							<h4>Apache</h4>
+							<i class="devicon-apache-line"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front apache"><h5>Skill</br> level:</br>Beginner</h5></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
 						<div class="ch-item php">
 							<h4>php</h4>
 							<i class="devicon-php-plain"></i>
@@ -442,6 +488,19 @@
 							<div class="ch-info-wrap">
 								<div class="ch-info">
 									<div class="ch-info-front sass"><h5>Skill</br> level:</br>Intermediate</h5></div>
+									<div class="ch-info-back">
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="ch-item haml">
+							<h4>Haml</h4>
+							<i class="icon-haml-2"></i>
+							<div class="ch-info-wrap">
+								<div class="ch-info">
+									<div class="ch-info-front haml"><h5>Skill</br> level:</br>Beginner</h5></div>
 									<div class="ch-info-back">
 									</div>
 								</div>
