hiding node project until it is working correctly

--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="gallery_containers">
+				<!-- <div class="gallery_containers">
 					<div class="project">
 						<div class="web showall gallery_container">
 							<img src="http://i.imgur.com/hqWOJhwh.png" alt="Node Beach House">
@@ -675,7 +675,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="gallery_containers">
 					<div class="project">
 						<div class="web showall gallery_container">
