added popup overlay

--- a/index.html
+++ b/index.html
@@ -597,15 +597,16 @@
 				</div>
 				<div class="gallery_containers">
 					<div class="project">
-						<div class="canvas">
+
 						<div class="web showall gallery_container">
 							<img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game">
 							<div class='project_info' onclick=''>
 								Trivia Night
 								<button class="gal_btn1 fade-in four">View Details</button>
 							</div>
-							<!-- <div class="canvas"> -->
-								<div class="pop1 mask">
+							<div id="popup" class="overlay">
+
+								<div class="pop1">
 									<span1>✖</span1>
 									<h6>Trivia Night</h6>
 									<!-- <div class="javascript">
