--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="bitIcon/style.css">
 	<link rel="stylesheet" href="bitIcon/variables.scss">
 	<link rel="stylesheet" href="haml/haml.css">
+
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
@@ -19,6 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/common.css" />
 	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/style.css" />
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	<script type="text/javascript" src="javascripts/modernizr.custom.79639.js"></script>
 	<script type="text/javascript" src="http://tympanus.net/Tutorials/CircleHoverEffects/js/modernizr.custom.79639.js"></script>
@@ -57,7 +59,9 @@
 		<div class="skewed-bg">
 			<div class="content">
 				<header class="close">
-					<nav role='navigation'>
+			<nav class="navbar navbar-default navbar-fixed-top">
+						<div class="container">
+							<div class='navbar-header'>
 						<div class="menu-bg"></div>
 						<div class="menu-burger">☰</div>
 						<div class="menu-items">
@@ -66,6 +70,8 @@
 							<div><a href="#portfolio">Skills</a></div>
 							<div><a href="#resume">Portfolio</a></div>
 							<div><a href="#contactMe">Contact Me</a></div>
+						</div>
+						</div>
 						</div>
 					</nav>
 			</header>
