--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html>
 <head>
 	<title>Farishta Haider</title>
@@ -120,7 +120,7 @@
 				<div class="row">
 					<img src="images/university-of-maryland-logo.png" alt="University of Maryland logo">
 					<div class="brief">
-						<span class="name">Univeristy of Maryland</span>
+						<span class="name">University of Maryland</span>
 						<span class="position"> College Park, Maryland
 							<p> Communication Major</p>
 							<p> Bachelors of Arts & Humanities</p>
@@ -613,6 +613,10 @@
 							<h4>JavaScript</h4>
 							<i class="devicon-javascript-plain"></i>
 						</div> -->
+						<!-- <div class="tech">
+							<li>HTML</li>
+							<li>CSS</li>
+							<li>JavaScript</li></div> -->
 						<p1> A trivia game written in Vanilla <strong>JavaScript</strong>.</p1></br>
 						<p1> This was our first WDI project. We had a topic to choose from and were restricted from using jQuery. I chose Trivia because it was a fun game that I personally enjoy.</p1></br>
 						<p1>I have already made some updates since the project was completed but still would like to add a scoreboard and more dynanic notifiers when you get the questions correct or wrong.</p1></br>
@@ -635,6 +639,10 @@
 					<div class="pop2">
 						<span2>✖</span2>
 						<h6>Cheerie</h6>
+						<!-- <div class="tech">
+							<li>HTML</li>
+							<li>CSS</li>
+							<li>Ruby on Rails</li></div> -->
 						<p1> Do you ever feel down in the dumps and need a quick cheer me up? Well then, Cheerie is the app for you. This delightful application was my second project for WDI. It is written in <strong> Ruby on Rails</strong></p1></br>
 						<p1> I chose this subject matter because I personally go to looks at gifs to cheer myself up and wanted to share this system to others to assist in turning their frowns upside down. </p1></br>
 						<div class="btn_container">
@@ -656,6 +664,11 @@
 					<div class="pop3">
 						<span3>✖</span3>
 						<h6>iCare</h6>
+						<!-- <div class="tech">
+							<li>HTML</li>
+							<li>CSS</li>
+							<li>Ruby on Rails</li>
+							<li>Angular</li></div> -->
 						<p1> iCare is a web application that assists residents in the DC Metro area find volunteer events and share volunteer stories. iCare was created with a <strong>Ruby on Rails backend and AngularJS Frontend</strong>.</p1></br>
 						<p1>This was a group project created by Alexa Klien, Brittany Branson and I. My contribtion to the project was the event portion of the site.</p1></br>
 						<div class="btn_container">
@@ -677,6 +690,12 @@
 	<div class="pop4">
 	<span4>✖</span4>
 	<h6>Node Beach House</h6>
+	<li>HTML</li>
+	<li>CSS</li>
+	<li>Mongoose</li>
+	<li>ExpressJS</li></div>
+	<li>AngularJS</li>
+	<li>NodeJS</li></div>
 	<p1> Node Vodka is the latest and greatest vodka line that is launching this summer. To celebrate their inaugrial year, they are hosting lucky winners at their Node Beach House. The Node Beach House is the latest experiential marketing campaigns from XYZ Marketing and this  website it the accompanying microsite for the tour. Extending the reach of the event long after the tour ends. There is a sweepstakes submission page to generate lead data, a photo pick up site that can be shared socially fully branded with Node's logo and mixologist section to show the many ways you are able to enjoy the vodka of the summer. And if you can't make it to the beach house, you can live vicariously through the experience by listening to Node Radio.</p1></br>
 	<p1> For our fourth and final project, I took my past experience in marketing with a developer twist. With the opportunity to use any language of our choise, I made this as a <strong>MEAN app</strong>.</p1></br>
 	<div class="btn_container">
@@ -698,6 +717,11 @@
 			<div class="pop6">
 				<span6>✖</span6>
 				<h6>General Assembly WDI Yearbook</h6>
+				<!-- <div class="tech">
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>JavaScript</li>
+				<li>Ruby on Rails</li></div> -->
 				<p1> A yearbook for the Web Development Immersive Cohort 8. </p1></br>
 				<p1> A project that was just for fun to share memories with our classmates. </br>Written in <strong>Ruby on Rails.</strong>.</p1></br>
 				<div class="btn_container">
